# resume-chatbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  context.py  main.py  pyproject.toml  requirements.txt  resume.txt  setup_gradio_app.py
sandbox/: sandbox.py
static/: custom.css  gradio_lite.html
utils/: aws.py  chatbot.py  config.py  context.py  logging_config.py  resume_full.txt  s3.py  timing_decorator.py
